compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTargetWithProperty/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTargetWithProperty/source.kt:6:5: exception: org.jetbrains.kotlin.codegen.CompilationException: Back-end (JVM) Internal error: Couldn't inline method call '<get-inlineGetter>' into
public fun baz(): kotlin.Unit defined in usage[SimpleFunctionDescriptorImpl@61c906ce]
fun baz() {
    inlineGetter
}
Cause: Not generated
Cause: Cannot inline bytecode of class a/AKt which has built with JVM target 1.8 into bytecode that is being built with JVM target 1.6. Please specify proper ''-jvm-target'' option
File being compiled and position: (6,5) in $TESTDATA_DIR$/source.kt
PsiElement: inlineGetter
The root cause was thrown at: InlineCodegenUtil.java:160
	at org.jetbrains.kotlin.codegen.inline.InlineCodegen.throwCompilationException(InlineCodegen.java:203)
	at org.jetbrains.kotlin.codegen.inline.InlineCodegen.genCallInner(InlineCodegen.java:189)
	at org.jetbrains.kotlin.codegen.CallGenerator.genCall(CallGenerator.kt:104)
	at org.jetbrains.kotlin.codegen.StackValue$Property.putSelector(StackValue.java:1189)
	at org.jetbrains.kotlin.codegen.StackValueWithLeaveTask.putSelector(StackValue.kt:57)
	at org.jetbrains.kotlin.codegen.StackValue.put(StackValue.java:108)
	at org.jetbrains.kotlin.codegen.StackValue.put(StackValue.java:101)
	at org.jetbrains.kotlin.codegen.ExpressionCodegen.putStackValue(ExpressionCodegen.java:350)
	at org.jetbrains.kotlin.codegen.ExpressionCodegen.gen(ExpressionCodegen.java:335)
	at org.jetbrains.kotlin.codegen.ExpressionCodegen.returnExpression(ExpressionCodegen.java:2261)
	at org.jetbrains.kotlin.codegen.FunctionGenerationStrategy$FunctionDefault.doGenerateBody(FunctionGenerationStrategy.java:49)
	at org.jetbrains.kotlin.codegen.FunctionGenerationStrategy$CodegenBased.generateBody(FunctionGenerationStrategy.java:69)
	at org.jetbrains.kotlin.codegen.FunctionCodegen.generateMethodBody(FunctionCodegen.java:494)
	at org.jetbrains.kotlin.codegen.FunctionCodegen.generateMethod(FunctionCodegen.java:254)
	at org.jetbrains.kotlin.codegen.FunctionCodegen.generateMethod(FunctionCodegen.java:175)
	at org.jetbrains.kotlin.codegen.FunctionCodegen.gen(FunctionCodegen.java:146)
	at org.jetbrains.kotlin.codegen.MemberCodegen.genSimpleMember(MemberCodegen.java:191)
	at org.jetbrains.kotlin.codegen.PackagePartCodegen.generateBody(PackagePartCodegen.java:98)
	at org.jetbrains.kotlin.codegen.MemberCodegen.generate(MemberCodegen.java:128)
	at org.jetbrains.kotlin.codegen.PackageCodegenImpl.generateFile(PackageCodegenImpl.java:133)
	at org.jetbrains.kotlin.codegen.PackageCodegenImpl.generate(PackageCodegenImpl.java:66)
	at org.jetbrains.kotlin.codegen.KotlinCodegenFacade.generatePackage(KotlinCodegenFacade.java:99)
	at org.jetbrains.kotlin.codegen.KotlinCodegenFacade.doGenerateFiles(KotlinCodegenFacade.java:77)
	at org.jetbrains.kotlin.codegen.KotlinCodegenFacade.compileCorrectFiles(KotlinCodegenFacade.java:44)
	at org.jetbrains.kotlin.cli.jvm.compiler.KotlinToJVMBytecodeCompiler.generate(KotlinToJVMBytecodeCompiler.kt:417)
	at org.jetbrains.kotlin.cli.jvm.compiler.KotlinToJVMBytecodeCompiler.analyzeAndGenerate(KotlinToJVMBytecodeCompiler.kt:328)
	at org.jetbrains.kotlin.cli.jvm.compiler.KotlinToJVMBytecodeCompiler.compileBunchOfSources(KotlinToJVMBytecodeCompiler.kt:208)
	at org.jetbrains.kotlin.cli.jvm.K2JVMCompiler.doExecute(K2JVMCompiler.kt:198)
	at org.jetbrains.kotlin.cli.jvm.K2JVMCompiler.doExecute(K2JVMCompiler.kt:54)
	at org.jetbrains.kotlin.cli.common.CLICompiler.exec(CLICompiler.java:190)
	at org.jetbrains.kotlin.cli.common.CLICompiler.exec(CLICompiler.java:137)
	at org.jetbrains.kotlin.cli.common.CLICompiler.exec(CLICompiler.java:64)
	at org.jetbrains.kotlin.cli.common.CLICompiler.doMainNoExit(CLICompiler.java:403)
	at org.jetbrains.kotlin.cli.AbstractCliTest.executeCompilerGrabOutput(AbstractCliTest.java:58)
	at org.jetbrains.kotlin.jvm.compiler.CompileKotlinAgainstCustomBinariesTest.compileKotlin(CompileKotlinAgainstCustomBinariesTest.java:241)
	at org.jetbrains.kotlin.jvm.compiler.CompileKotlinAgainstCustomBinariesTest.compileKotlin(CompileKotlinAgainstCustomBinariesTest.java:219)
	at org.jetbrains.kotlin.jvm.compiler.CompileKotlinAgainstCustomBinariesTest.doWrongInlineTargetTest(CompileKotlinAgainstCustomBinariesTest.java:600)
	at org.jetbrains.kotlin.jvm.compiler.CompileKotlinAgainstCustomBinariesTest.testWrongInlineTargetWithProperty(CompileKotlinAgainstCustomBinariesTest.java:594)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:39)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:25)
	at java.lang.reflect.Method.invoke(Method.java:597)
	at junit.framework.TestCase.runTest(TestCase.java:176)
	at org.jetbrains.kotlin.test.testFramework.KtUsefulTestCase.access$001(KtUsefulTestCase.java:53)
	at org.jetbrains.kotlin.test.testFramework.KtUsefulTestCase$2.run(KtUsefulTestCase.java:216)
	at org.jetbrains.kotlin.test.testFramework.EdtTestUtil$Companion$runInEdtAndWait$1.invoke(EdtTestUtil.kt:26)
	at org.jetbrains.kotlin.test.testFramework.EdtTestUtil$Companion$runInEdtAndWait$1.invoke(EdtTestUtil.kt:24)
	at org.jetbrains.kotlin.test.testFramework.EdtTestUtilKt$sam$Runnable$d152a621.run(EdtTestUtil.kt)
	at java.awt.event.InvocationEvent.dispatch(InvocationEvent.java:199)
	at java.awt.EventQueue.dispatchEventImpl(EventQueue.java:672)
	at java.awt.EventQueue.access$400(EventQueue.java:81)
	at java.awt.EventQueue$2.run(EventQueue.java:633)
	at java.awt.EventQueue$2.run(EventQueue.java:631)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.security.AccessControlContext$1.doIntersectionPrivilege(AccessControlContext.java:87)
	at java.awt.EventQueue.dispatchEvent(EventQueue.java:642)
	at java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:269)
	at java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:184)
	at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:174)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:169)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:161)
	at java.awt.EventDispatchThread.run(EventDispatchThread.java:122)
Caused by: java.lang.UnsupportedOperationException: Cannot inline bytecode of class a/AKt which has built with JVM target 1.8 into bytecode that is being built with JVM target 1.6. Please specify proper ''-jvm-target'' option
	at org.jetbrains.kotlin.codegen.inline.InlineCodegenUtil.assertVersionNotGreaterThanGeneratedOne(InlineCodegenUtil.java:160)
	at org.jetbrains.kotlin.codegen.inline.InlineCodegenUtil$1.visit(InlineCodegenUtil.java:111)
	at org.jetbrains.org.objectweb.asm.ClassReader.accept(ClassReader.java:622)
	at org.jetbrains.org.objectweb.asm.ClassReader.accept(ClassReader.java:506)
	at org.jetbrains.kotlin.codegen.inline.InlineCodegenUtil.getMethodNode(InlineCodegenUtil.java:108)
	at org.jetbrains.kotlin.codegen.inline.InlineCodegen.doCreateMethodNodeFromCompiled(InlineCodegen.java:351)
	at org.jetbrains.kotlin.codegen.inline.InlineCodegen.access$000(InlineCodegen.java:76)
	at org.jetbrains.kotlin.codegen.inline.InlineCodegen$1.invoke(InlineCodegen.java:277)
	at org.jetbrains.kotlin.codegen.inline.InlineCodegen$1.invoke(InlineCodegen.java:274)
	at org.jetbrains.kotlin.codegen.inline.InlineCacheKt.getOrPut(InlineCache.kt:34)
	at org.jetbrains.kotlin.codegen.inline.InlineCodegen.createMethodNode(InlineCodegen.java:273)
	at org.jetbrains.kotlin.codegen.inline.InlineCodegen.genCallInner(InlineCodegen.java:179)
	... 60 more

    inlineGetter
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:12:5: error: cannot inline bytecode built with JVM target 1.8 into bytecode that is being built with JVM target 1.6. Please specify proper '-jvm-target' option
    inlineSetter = 1
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:15:5: error: cannot inline bytecode built with JVM target 1.8 into bytecode that is being built with JVM target 1.6. Please specify proper '-jvm-target' option
    allInline = 1
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:18:7: error: cannot inline bytecode built with JVM target 1.8 into bytecode that is being built with JVM target 1.6. Please specify proper '-jvm-target' option
    a.inlineFun {}
      ^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:23:7: error: cannot inline bytecode built with JVM target 1.8 into bytecode that is being built with JVM target 1.6. Please specify proper '-jvm-target' option
    a.inlineSetter = 1
      ^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:26:7: error: cannot inline bytecode built with JVM target 1.8 into bytecode that is being built with JVM target 1.6. Please specify proper '-jvm-target' option
    a.allInline = 1
      ^
COMPILATION_ERROR